...
import 'package:speech_to_text/speech_to_text.dart';
import 'package:ui/ui.dart';

import '../state/language_cubit.dart';

class LanguageDialog extends StatelessWidget {
  const LanguageDialog({Key? key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    var cubit = GetIt.I<LanguageCubit>();
    var languages = cubit.state.availableLanguages;

...
        children: [
          const Text(
            'Languages',
            textAlign: TextAlign.center,
          ),
          Align(
            key: const Key("LanguageCloseDialog"),
            alignment: Alignment.topRight,
            child: InkWell(
              borderRadius: BorderRadius.circular(4),
              onTap: () => Navigator.pop(context),
              child: const Padding(
                padding: EdgeInsets.all(8.0),
...
