...
  /// **'Under construction'**
  String get underConstruction;

  /// A message to show the speech recognition is active
  ///
  /// In en, this message translates to:
  /// **'Listening'**
  String get speechWidgetListening;

  /// A message to call for action to enable speech recognition
  ///
  /// In en, this message translates to:
  /// **'Hold the microphone'**
  String get speechWidgetHoldMicrophone;
}

class _AppLocalizationsDelegate
    extends LocalizationsDelegate<AppLocalizations> {
  const _AppLocalizationsDelegate();
...
