...
  @override
  Size get preferredSize => const Size.fromHeight(kToolbarHeight);

  List<Widget> _buildAppBarButtons(BuildContext context) {
    return <Widget>[
      AppBarButton(
        key: const Key("SettingsButton"),
        iconData: Icons.settings,
        onPressed: () => {
          showDialog<void>(
            context: context,
            builder: (dContext) => LanguageDialog(),
          )
...
